# BerlinUhr

./: .gitignore  CMakeLists.txt  README.md
forms/: main_window.ui
header/: berlin_clock.hpp  mainwindow.hpp  qgraphics_rectwidget.hpp  qgraphics_roundwidget.hpp  rgba.hpp
source/: berlin_clock.cpp  main.cpp  mainwindow.cpp  qgraphics_rectwidget.cpp  qgraphics_roundwidget.cpp
